[wip] add meeting details page

--- a/client-web/src/app/globals.css
+++ b/client-web/src/app/globals.css
@@ -87,8 +87,6 @@ body {
   }
 }
 
-
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
@@ -96,4 +94,12 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.outline-no-bottom {
+  border-top-width: 2px;
+  border-left-width: 2px;
+  border-right-width: 2px;
+  border-bottom-width: 0;
+  outline-offset: 2px;
 }
