--- a/client-web/src/app/globals.css
+++ b/client-web/src/app/globals.css
@@ -103,3 +103,9 @@ body {
   border-bottom-width: 0;
   outline-offset: 2px;
 }
+
+.no-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
